--- a/ratethisapp/src/main/res/values-pt-rBR/strings.xml
+++ b/ratethisapp/src/main/res/values-pt-rBR/strings.xml
@@ -1,11 +1,11 @@
 <resources>
 
-    <string name="rta_dialog_title">Qualifique esse Aplicativo</string>
+    <string name="rta_dialog_title">Avalie este aplicativo</string>
     <string name="rta_dialog_message">
-      Se você gosta de usar esse aplicativo, se importaria de qualificá-lo? Não irá tomar mais de um minuto.
+      Se você está gostando deste aplicativo, se importaria em avaliá-lo? Não irá demorar mais de um minuto.
       Obrigado pelo o seu apoio.
     </string>
-    <string name="rta_dialog_ok">Qualificar</string>
+    <string name="rta_dialog_ok">Avaliar</string>
     <string name="rta_dialog_cancel">Depois</string>
     <string name="rta_dialog_no">Não, obrigado</string>
 
